<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">通讯录</string>
    <string name="action_settings">Settings</string>
    <string name="tab_contentDescription">tab</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">姓名</string>
    <string name="addcontact_save">保            存</string>
    <string name="addcontact_more">添加更多属性</string>
    <string name="adcontact_address">地址：</string>
    <string name="addcontact_group">分组</string>
    <string name="addcontact_else">其他</string>
    <string name="addcontact_input_address">请输入地址</string>
    <string name="addcontact_input_email">请输入邮箱</string>
    <string name="addcontact_email">邮箱：</string>
    <string name="addcontact_input_phone">请输入手机号码</string>
    <string name="addcontact_phone">电话：</string>
    <string name="addcontact_name">姓名</string>
    <string name="addcontact_title">新建联系人</string>
    <string name="show_contactname">姓名</string>
    <string name="show_contactnumber">电话</string>
    <string name="tab_dial">拨号</string>
    <string name="tab_contact">联系人</string>
    <string name="tab_group">群组</string>
    <string name="tab_setting">设置</string>
    <string name="contact_search">搜索联系人</string>
    <string name="group_manage">分组管理</string>
    <string name="btn_groupmanage">管	理</string>
    <string name="contact_detail">联系人详情</string>
    <string name="choose_photo_title">选 择 头 像</string>
    <string name="image_btn_back">返回</string>
    <string name="divde_line">分割线</string>
    <string name="_add_removecontact_sure_btn">确定(0)</string>
    <string name="_add_removecontact_selectunAll">选择全部</string>
    <string name="setting_imagebtn_restore_contact">还原联系人</string>
    <string name="setting_imagebtn_backup_contact">备份联系人</string>
    <string name="setting_imagebtn_merge_contact">联系人去重</string>
    <string name="main_tab_tv_dial">拨号键盘</string>
    <string name="main_tab_tv_contact">联系人</string>
    <string name="main_tab_tv_setting">其他</string>
    <string name="tv_loading">正在加载...</string>
    <string name="pop_select_btn_manage">管  理</string>
    <string name="tip_merge_contact_tv">以下联系人资料部分重合，建议手动合并</string>
    <string name="merge_contatc_tv">联系人去重</string>
    <string name="key_input_please_search">请输入关键字</string>
    <string name="add_remove_contact_group">向分组添加或移除成员</string>
    <string name="no_match_contact_tv">暂无匹配联系人</string>
    <string name="merge_contact_btn_self">手动合并</string>
    <string name="no_merge_contact_merge_contact">暂无重复联系人</string>
</resources>
