<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/contact_merge_title"
        style="@style/topbar_bg"
        android:layout_width="fill_parent"
        android:layout_height="42.0dip" >

        <ImageButton
            android:id="@+id/imagebtn_back_"
            android:layout_width="32dip"
            android:layout_height="32dip"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/tool_bar_style"
            android:contentDescription="@string/image_btn_back" />

        <TextView
            android:id="@+id/txtmerge_title_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingRight="20dip"
            android:text="@string/merge_contatc_tv"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tip_merge_contact_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/contact_merge_title"
        android:background="@color/yello"
        android:paddingLeft="28dp"
        android:text="@string/tip_merge_contact_tv" />

    <ListView
        android:id="@+id/merge_contact_lv"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tip_merge_contact_tv"
        android:divider="#ff419de4"
        android:dividerHeight="0.1dp"
        android:scrollbars="none" />
	<TextView
	    android:id="@+id/no_merge_contact_tv"
	    android:layout_centerInParent="true"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/no_merge_contact_merge_contact"
	    android:visibility="gone"
	    android:textColor="#ff419de4"
	    />
</RelativeLayout>