<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/acbuwa_page"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/acbuwa_topbar"
        style="@style/topbar_bg"
        android:layout_width="fill_parent"
        android:layout_height="42.0dip" >

        <ImageButton
            android:id="@+id/imbAddContactToGroup_Back"
            android:layout_width="32dip"
            android:layout_height="32dip"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_centerVertical="true"
            android:background="@drawable/tool_bar_style"
            android:contentDescription="@string/image_btn_back" />

        <TextView
            android:id="@+id/txtAddContactToGroup_Title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:paddingRight="20dip"
            android:text="@string/add_remove_contact_group"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <com.night.contact.contact.ClearEditText
            android:id="@+id/pb_search_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="@drawable/search_bar_edit_selector"
            android:drawableLeft="@drawable/search_bar_icon_normal"
            android:hint="@string/key_input_please_search"
            android:singleLine="true"
            android:textSize="15.0dip" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@+id/pb_listvew"
            android:layout_width="295dp"
            android:layout_height="380dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="5dp"
            android:divider="@color/window_bg"
            android:dividerHeight="1dp"
            android:scrollbars="none" />

        <com.night.contact.ui.AlphabetScrollBar
            android:id="@+id/fast_scroller"
            android:layout_width="22dp"
            android:layout_height="383dp"
            android:layout_gravity="top|right|center"
            android:layout_marginTop="0dip"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/dic_background" />

        <TextView
            android:id="@+id/fast_position"
            android:layout_width="70dip"
            android:layout_height="70dip"
            android:layout_gravity="center_horizontal|top"
            android:layout_margin="34dip"
            android:background="@drawable/sort_icon_bg_click"
            android:gravity="center"
            android:padding="2dip"
            android:textColor="#404040"
            android:textSize="48sp"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/nocontacts_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="28sp"
            android:text="@string/no_match_contact_tv"
            android:visibility="gone"/>
    </FrameLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:background="#101418"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/sure_num"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@drawable/btn_style"
            android:text="@string/_add_removecontact_sure_btn"
            android:textColor="#ADAAAD"
            android:textSize="22sp" />

        <ImageView
            android:contentDescription="@string/image_btn_back"
            android:layout_width="1dip"
            android:layout_height="50dip"
            android:background="@drawable/list_item_divide_line2" />

        <Button
            android:id="@+id/select_all"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@drawable/btn_style"
            android:text="@string/_add_removecontact_selectunAll"
            android:textColor="#ADAAAD"
            android:textSize="22sp" />
    </LinearLayout>
</LinearLayout>