<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:layout_gravity="bottom"
    android:background="@drawable/tab_bar"
    android:orientation="vertical" >
    
     <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />
   
    <LinearLayout
        android:id="@+id/id_switch_tab_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/id_tab_dial_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dip" >

            <ImageButton
                android:id="@+id/id_imagebtn_dial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/tab_contentDescription"
                android:src="@drawable/tab_dial_normal" />

            <TextView
                android:id="@+id/id_dial_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_tab_tv_dial"
                android:textColor="#0000FF"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tab_contacts_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dip"
            android:saveEnabled="false" >
            
            <ImageButton
                android:id="@+id/id_imagebtn_contacts"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/tab_contentDescription"
                android:src="@drawable/tab_contact_normal" />

            <TextView
                android:id="@+id/id_contacts_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_tab_tv_contact"
                android:textColor="#000000"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tab_settings_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dip" >
            
            <ImageButton
                android:id="@+id/id_imagebtn_setting"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/tab_contentDescription"
                android:src="@drawable/tab_setting_normal" />

            <TextView
                android:id="@+id/id_settings_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_tab_tv_setting"
                android:textColor="#000000"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>