<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

      <RelativeLayout
        android:id="@+id/acbuwa_topbar"
        style="@style/topbar_bg"
        android:layout_width="fill_parent"
        android:layout_height="46.0dip" >

        <TextView
            android:id="@+id/topbar_title"
            style="@style/topbar_text"
            android:layout_centerHorizontal="true"
            android:text="@string/main_tab_tv_setting" />
    </RelativeLayout>
    
    <LinearLayout
        android:layout_marginTop="30dp"
        android:id="@+id/ll_merge_contact"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/btn_style2"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imagebtn_mergecontact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@null"
            android:contentDescription="@string/setting_imagebtn_merge_contact"
            android:src="@drawable/merge_contact" />

        <TextView
            android:id="@+id/tv_mergecontact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/setting_imagebtn_merge_contact"
            android:textColor="@color/button_selected"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btn_mergecontact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="2"
            android:background="@drawable/other_more"
            android:contentDescription="@string/setting_imagebtn_merge_contact" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_backup_contact"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_style2"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imagebtn_backupcontact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@null"
            android:contentDescription="@string/setting_imagebtn_backup_contact"
            android:src="@drawable/backup_contact" />

        <TextView
            android:id="@+id/tv_backupcontact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/setting_imagebtn_backup_contact"
            android:textColor="@color/button_selected"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btn_backupcontact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="2"
            android:background="@drawable/other_more"
            android:contentDescription="@string/setting_imagebtn_backup_contact" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_restore_contact"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_style2"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imagebtn_restorecontact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@null"
            android:contentDescription="@string/setting_imagebtn_restore_contact"
            android:src="@drawable/restore_contact" />

        <TextView
            android:id="@+id/tv_restorecontact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/setting_imagebtn_restore_contact"
            android:textColor="@color/button_selected"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btn_restorecontact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="2"
            android:background="@drawable/other_more"
            android:contentDescription="@string/setting_imagebtn_restore_contact" />
    </LinearLayout>

</LinearLayout>